--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,6 +419,45 @@ footer{
     background-color: #FCB831;
     transition: 1s;
 }
+.buscador input::placeholder,
+.buscador-responsive input::placeholder{
+    color: white;
+}
+
+.buscador,.buscador-responsive {
+    width: 380px;
+    margin: auto;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+.buscador input,
+.buscador-responsive input{
+    font-size: 18px;
+    padding-left: 10px;
+    color: white;
+}
+.span-look {
+    width: 66px;
+    background-color: #fcb831;
+    border-radius: 50%;
+    padding: 15px;
+    position: absolute;
+    right: 0px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+input.palabra-look {
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+    background: #114e9c;
+}
+.buscador-responsive{
+    display: none;
+}
 
 @media (max-width: 1270px){
     .simbolos span:nth-child(2)::before{
@@ -541,14 +580,7 @@ footer{
         background-color: #FCB831;
         border-radius: 25px;
     }
-    .linea:nth-child(1){position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        transform:rotate(45deg);
-        left:2px;
-    }
+    
     .linea:nth-child(2){
         display: none
     }
@@ -576,98 +608,75 @@ footer{
     .pasos{
         width:  90%;
     }
+    .linea:nth-child(1){position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        transform:rotate(45deg);
+        left:2px;
+    }
     .cambio-lineaUno{
-        animation: bottom ;
+        transition: .0s !important;
+        width: 55% !important;
+        transform: rotate(0deg) !important;
     }
-    
- 
-  /* 
-  @keyframes top {
-    0% {
-      top: 0;
-      transform: rotate(0);
+    .cambio-lineaDos{
+        display: block !important;
+        width: 55% !important;
+        transform: rotate(0deg) !important;
+        position: absolute;
+        margin: 25%;
     }
-    50% {
-      top: 22px;
-      transform: rotate(0);
+
+    .cambio-lineaTres{
+        transition: .0s !important;
+        width: 55% !important;
+        margin-bottom: 15px;
+        transform: rotate(0deg) !important;
     }
-    100% {
-      top: 22px;
-      transform: rotate(45deg);
+    .buscador{
+        display: none;
     }
-  }
-  
-  @keyframes top-2 {
-    0% {
-      top: 22px;
-      transform: rotate(45deg);
+    .buscador-responsive{
+        display: flex;
+        bottom: 0px;
+        position: fixed;
+        bottom: 120px;
+        right: 40px;
+        flex-direction: row-reverse;
     }
-    50% {
-      top: 22px;
-      transform: rotate(0deg);
+    .buscador-responsive .span-look {
+        width: 66px;
+        background-color: #fcb831;
+        border-radius: 50%;
+        padding: 15px;
+        position: absolute;
+        right: 0px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
     }
-    100% {
-      top: 0;
-      transform: rotate(0deg);
+    .buscador-responsive input.palabra-look {
+        width: 15%;
+        height: 100%;
+        border-radius: 25px;
+        background: #114e9c;
+        transition: 1s all;
+        position: relative;
+        right: 0px;
+        outline: none;
     }
-  }
-  
-  @keyframes bottom {
-    0% {
-      bottom: 0;
-      transform: rotate(0);
+    .mostrarbuscador{
+        width: 100% !important;
     }
-    50% {
-      bottom: 22px;
-      transform: rotate(0);
-    }
-    100% {
-      bottom: 22px;
-      transform: rotate(135deg);
-    }
-  }
-  
-  @keyframes bottom-2 {
-    0% {
-      bottom: 22px;
-      transform: rotate(135deg);
-    }
-    50% {
-      bottom: 22px;
-      transform: rotate(0);
-    }
-    100% {
-      bottom: 0;
-      transform: rotate(0);
-    }
-  }
-  
-  @keyframes scaled {
-    50% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(0);
-    }
-  }
-  
-  @keyframes scaled-2 {
-    0% {
-      transform: scale(0);
-    }
-    50% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(1);
-    }
-  } */
-  
+
 }
 
 @media (max-width: 625px){
     .seccion-intrucciones div p:nth-child(even) {
         flex-direction: row;
+
     }
 }
 
